<resources>
    <string name="app_name">Inventory App</string>
    <string name="pcs">Pcs</string>
    <string name="dollar">$</string>
    <string name="sale">Sale</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="describe">Describe</string>
    <string name="nothing_to_show">There is nothing to show. Please add data.</string>
    <string name="image">Image</string>
    <string name="dummy_data">Insert dummy data</string>
    <string name="add_product">Add product</string>
    <string name="add_image">Add image</string>
    <string name="no_foto">No picture available</string>
    <string name="supplier">Supplier</string>
    <string name="email">email</string>
    <string name="insert_failed">Insert product failed:</string>
    <string name="insert_successful">Insert product successful</string>
    <string name="complete_field">Complete the required fields</string>
    <string name="not_be_zero">Price and quantity can not be zero</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="delete_product">Delete product</string>
    <string name="id">Id</string>
    <string name="order_product">Order</string>
    <string name="order_question">Please provide a few pieces:</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="added_dumme">Added dummy data</string>
    <string name="no_added">No added</string>
    <string name="ex_product">Example product</string>
    <string name="examp_desc">Example product description</string>
    <string name="examp_email">email@example.com</string>
    <string name="delete_this">Delete this product ?</string>
    <string name="delete_all">Delete:</string>
    <string name="rows">Rows</string>
    <string name="delete_all_products">Delete all products</string>
    <string name="product_detail">Product detail</string>
    <string name="not_del">Nothing delete</string>
</resources>
