<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/item_id"
        android:layout_weight="1"
        style="@style/viewItemStyle"/>
    <TextView
        android:id="@+id/item_name"
        android:layout_weight="3"
        style="@style/viewItemStyle"/>
    <TextView
        android:id="@+id/item_price"
        android:layout_weight="2"
        android:textAlignment="textEnd"
        style="@style/viewItemStyle"/>
    <TextView
        android:text="@string/dollar"
        android:layout_weight="1"
        style="@style/viewItemStyle"/>
    <TextView
        android:id="@+id/item_quantity"
        android:layout_weight="2"
        android:textAlignment="textEnd"
        style="@style/viewItemStyle"/>
    <TextView
        android:text="@string/pcs"
        android:layout_weight="1"
        style="@style/viewItemStyle"/>

    <Button
        android:id="@+id/sale_button"
        style="@style/viewItemStyle"
        android:layout_weight="3"
        android:text="@string/sale" />

</LinearLayout>